新增 userModule and playerModule 数据模块ref获取从scala移植到java模块 测试自定义sql语句查询